kuber-3/k8s/deployment-products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-deployment
  template:
    metadata:
      labels:
        app: product-deployment
    spec:
      containers:
      - name: product-deployment
        image: kuber-3-products
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
