kuber-3/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main-server
  template:
    metadata:
      labels:
        app: main-server
    spec:
      containers:
      - name: main-server
        image: kuber-3
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 3000
