kuber-3/k8s/service-product.yaml
kind: Service
apiVersion: v1
metadata:
  name:  product-deployment-service
spec:
  selector:
    app:  product-deployment
  type:  ClusterIP
  ports:
  - name:  name-of-the-port
    port:  80
    targetPort:  8080
