kuber-3/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  labels:
    app.kubernetes.io/name: main-ingress
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: main-server-service
            port: 
              number: 80
      - pathType: Prefix
        path: "/products"
        backend:
          service:
            name: product-deployment-service
            port: 
              number: 80
